# MuscleCellSeg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  copydll.bat
Data/Model/EdgeModel/: edgemodel_opts.txt
DependLib/gtest/lib/: gtest.lib  gtest_main.lib
MuscleSeg/: CMakeLists.txt  edge_detect.cpp  edge_model.cpp  feature_extraction.cpp  frangi.cpp  hierarchicalimagesegmentation.cpp  img_processing.cpp  make_lm_filters.cpp  muscle_seg.cpp  opencvsparsematrixmath.cpp  treemodel.cpp  ucm.cpp  ucm_mean_pb.cpp  water_shed.cpp  wrapper.cpp
MuscleSegUT/: CMakeLists.txt  main.cpp  muscle_seg_ut.cpp
include/: edge_detect.h  edge_model.h  export.h  feature_extraction.h  frangi.h  hierarchicalimagesegmentation.h  img_processing.h  make_lm_filters.h  muscle_seg.h  opencvsparsematrixmath.h  region_props.h  treemodel.h  ucm.h  ucm_mean_pb.h  water_shed.h  wrapper.h
