CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(MuscleMiner)

SET(MUSCLEMINER_SOURCE_DIR ${PROJECT_SOURCE_DIR}/)
SET(DEPENDENCE_PATH ${PROJECT_BINARY_DIR}/../DependLib)
SET(WORKING_DIR ${PROJECT_BINARY_DIR}/bin/Debug)

ADD_SUBDIRECTORY(MuscleSeg)
ADD_SUBDIRECTORY(MuscleSegUT)

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -Wall -Wno-unused-variable -pthread")
ELSE(CMAKE_BUILD_TYPE STREQUAL "Release")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O2 -pthread -fopenmp")
ENDIF(CMAKE_BUILD_TYPE STREQUAL "Debug")
MESSAGE("Build Type: " ${CMAKE_BUILD_TYPE} ${CMAKE_CXX_FLAGS})

SET(CMAKE_INSTALL_PATH ${PROJECT_BINARY_DIR}/bin)