CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(MuscleSeg CXX)
OPTION(BUILD_MUSCLE_SEG "Build MuscleSeg." ON)

IF(BUILD_MUSCLE_SEG)
    FILE(GLOB_RECURSE MUSCLE_SEG_HEADERS_LIST
        ${MUSCLEMINER_SOURCE_DIR}/include/*.h)
    FILE(GLOB_RECURSE MUSCLE_SEG_SOURCES_LIST ./*.cpp)
    SOURCE_GROUP("Header Files" FILES ${MUSCLE_SEG_HEADERS_LIST})
    SOURCE_GROUP("Source Files" FILES ${MUSCLE_SEG_SOURCES_LIST})

    INCLUDE_DIRECTORIES(
        ${MUSCLEMINER_SOURCE_DIR}/include/
        ${DEPENDENCE_PATH}/OpenCV-3.0.0/include
        )

    LINK_DIRECTORIES(
        ${DEPENDENCE_PATH}/OpenCV-3.0.0/lib
        ${PROJECT_BINARY_DIR}/../bin
        )

    ADD_DEFINITIONS(-DMUSCLEMINER_MUSCLE_SEG_LIBRARY)
    ADD_LIBRARY(muscle_seg SHARED ${MUSCLE_SEG_SOURCES_LIST} ${MUSCLE_SEG_HEADERS_LIST})
    TARGET_LINK_LIBRARIES(muscle_seg opencv_world300d.lib)

    SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../bin)
ENDIF(BUILD_MUSCLE_SEG)
